--- a/try-ts/package.json
+++ b/try-ts/package.json
@@ -2,6 +2,7 @@
   "name": "try-ts",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
