--- a/blueberry-book/package.json
+++ b/blueberry-book/package.json
@@ -9,5 +9,9 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^17.0.26",
+    "typescript": "^4.6.3"
+  }
 }
