--- a/wavesurfer-react/package.json
+++ b/wavesurfer-react/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
+    "wavesurfer-react": "^2.1.3",
     "wavesurfer.js": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
