--- a/wavesurfer-next-example/package.json
+++ b/wavesurfer-next-example/package.json
@@ -15,12 +15,14 @@
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "wavesurfer.js": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.32",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/wavesurfer.js": "^6.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
