--- a/wavesurfer-next-example/package.json
+++ b/wavesurfer-next-example/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "randomcolor": "^0.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "wavesurfer.js": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.32",
+    "@types/randomcolor": "^0.5.6",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
     "@types/wavesurfer.js": "^6.0.3",
