--- a/csv-recorder/package.json
+++ b/csv-recorder/package.json
@@ -14,11 +14,15 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "framer-motion": "^4.1.17",
     "typescript": "4.7.2"
   }
 }
